--- a/_posts/2021-04-14-常用maven依赖整理.markdown
+++ b/_posts/2021-04-14-常用maven依赖整理.markdown
@@ -49,3 +49,31 @@ log4j.logger.java.sql.Statement = DEBUG
 log4j.logger.java.sql.PreparedStatement = DEBUG
 log4j.logger.java.sql.ResultSet = DEBUG
 ```
+
+#### Mybatis
+```
+<!--mysql驱动-->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.47</version>
+</dependency>
+<!--mybatis-->
+<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+<dependency>
+    <groupId>org.mybatis</groupId>
+    <artifactId>mybatis</artifactId>
+    <version>3.5.2</version>
+</dependency>
+<!--junit-->
+```
+
+#### 单元测试
+```
+<!--junit-->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+</dependency>
+```
