--- a/_posts/2021-05-09-中间件之KAFKA.markdown
+++ b/_posts/2021-05-09-中间件之KAFKA.markdown
@@ -3,7 +3,7 @@ title: 中间件学习之KAFKA
 author: ynf
 date: 2021-05-09 07:23:31 +0800
 categories: [MQ]
-tags: [kafka]
+tags: [KAFKA]
 ---
 ## KAFKA单机及集群部署学习
 ### 一、概述
