--- a/_posts/2021-06-10-八大基本排序的Java和PHP实现.md
+++ b/_posts/2021-06-10-八大基本排序的Java和PHP实现.md
@@ -2,8 +2,8 @@
 title: 常用的基本排序的Java和PHP实现
 author: ynf
 date: 2021-07-02 18:47:31 +0800
-categories: [算法]
-tags: [JAVA, 排序算法]
+categories: [数据结构与算法]
+tags: [JAVA, 排序算法， PHP]
 ---
 
 ## 常用的基本排序的Java和PHP实现
