--- a/_posts/2021-01-11-Yaf学习笔记.markdown
+++ b/_posts/2021-01-11-Yaf学习笔记.markdown
@@ -2,7 +2,7 @@
 title: Yaf学习笔记
 author: ynf
 date: 2021-01-11 16:23:31 +0800
-categories: [PHP]
+categories: [PHP框架]
 tags: [PHP, Yaf]
 ---
 #### 1、初始化yaf配置：
