--- a/_posts/2021-04-19-限流的理解.markdown
+++ b/_posts/2021-04-19-限流的理解.markdown
@@ -3,7 +3,7 @@ title: 你对限流了解多少
 author: ynf
 date: 2021-04-19 18:23:31 +0800
 categories: [计算机网络]
-tags: [Network]
+tags: [限流]
 ---
 ### 什么是限流
 限流的本质是因为后端处理能力有限，需要截掉超过处理能力之外的请求，亦或是为了均衡客户端对服务端资源的公平调用，防止一些客户端饿死。
