--- a/src/mysql/1.md
+++ b/src/mysql/1.md
@@ -1,16 +1,15 @@
 ---
 icon: pen-to-square
-date: 2022-01-04
+date: 2022-01-01
 category:
   - 苹果
-  - 水果
 tag:
   - 红
   - 大
   - 圆
 ---
 
-# 苹果 4
+# 待更新
 
 ## 标题 2
 
