--- a/src/algorithm/1.md
+++ b/src/algorithm/1.md
@@ -1,15 +1,15 @@
 ---
 icon: pen-to-square
-date: 2022-01-08
+date: 2022-01-01
 category:
-  - 香蕉
+  - 苹果
 tag:
-  - 黄
-  - 弯曲的
-  - 长
+  - 红
+  - 大
+  - 圆
 ---
 
-# 香蕉 4
+# 待更新
 
 ## 标题 2
 
