--- a/src/distributed/1.md
+++ b/src/distributed/1.md
@@ -1,15 +1,15 @@
 ---
 icon: pen-to-square
-date: 2022-01-09
+date: 2022-01-01
 category:
-  - 樱桃
+  - 苹果
 tag:
   - 红
-  - 小
+  - 大
   - 圆
 ---
 
-# 樱桃
+# 待更新
 
 ## 标题 2
 
