--- a/src/middleware/1.md
+++ b/src/middleware/1.md
@@ -1,20 +1,15 @@
 ---
 icon: pen-to-square
-date: 2022-01-02
+date: 2022-01-01
 category:
   - 苹果
 tag:
   - 红
   - 大
   - 圆
-star: true
 ---
 
-# 苹果 2
-
-一个被星标了的苹果文章。
-
-<!-- more -->
+# 待更新
 
 ## 标题 2
 
